--- a/src/template/sidebar.html
+++ b/src/template/sidebar.html
@@ -15,46 +15,54 @@
 </div>
 
 <div class="remodal auth" data-remodal-id="auth">
-  <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <h3 class="text-center">Вход</h3>
-    <form>
-      <div class="form-group">
-        <label for="auth-mail">Эл. почта</label>
-        <input type="email" class="form-control" id="auth-mail" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <label for="auth-pass">Пароль</label>
-        <input type="password" class="form-control" id="auth-pass" placeholder="Пароль">
-      </div>
-      <div class="form-group">
+  <!-- <div class="col-xs-12 col-md-6"> -->
+  <!-- <div class="col-xs-12 col-md-6"> -->
 
+  <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <ul class="nav nav-tabs" role="tablist">
+      <li role="presentation" class="active">
+        <a href="#login" aria-controls="home" role="tab" data-toggle="tab">Вход</a>
+      </li>
+      <li role="presentation">
+        <a href="#reg" aria-controls="profile" role="tab" data-toggle="tab">Регистрация</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div role="tabpanel" class="tab-pane active" id="login">
+        <form>
+          <div class="form-group">
+            <label for="auth-mail">Эл. почта</label>
+            <input type="email" class="form-control" id="auth-mail" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="auth-pass">Пароль</label>
+            <input type="password" class="form-control" id="auth-pass" placeholder="Пароль">
+          </div>
+          <div class="form-group">
+
+          </div>
+          <button type="submit" class="btn btn-block btn-primary btn-lg">Войти</button>
+        </form>
       </div>
-      <button type="submit" class="btn btn-block btn-primary btn-lg">Войти</button>
-    </form>
+      <div role="tabpanel" class="tab-pane" id="reg">
+        <form>
+          <div class="form-group">
+            <label for="auth-mail">Эл. почта</label>
+            <input type="email" class="form-control" id="auth-mail2" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="auth-pass">Пароль</label>
+            <input type="password" class="form-control" id="auth-pass2" placeholder="Пароль">
+          </div>
+          <div class="form-group">
+
+          </div>
+          <button type="submit" class="btn btn-block btn-primary btn-lg">Зарегистрироваться</button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
-
-<div class="remodal auth" data-remodal-id="login">
-  <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <h3 class="text-center">Регистрация</h3>
-    <form>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Эл. почта</label>
-        <input type="email" class="form-control" id="reg-mail" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Пароль</label>
-        <input type="password" class="form-control" id="reg-pass" placeholder="Пароль">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Повтор пароля</label>
-        <input type="password" class="form-control" id="reg-pass-repeat" placeholder="Пароль">
-      </div>
-      <button type="submit" class="btn btn-block btn-primary btn-lg">Зарегистрироваться</button>
-    </form>
-  </div>
-</div>
-
 
 <div class="col-xs-12 col-md-3">
 
@@ -87,8 +95,7 @@
 
         <!-- Не вошли в аккаунт -->
         <!-- <li><a href="#"><i class="settings-ic"></i></a></li> -->
-        <li><a href="#auth"><i class="login-ic"></i>Войти</a></li>
-        <li><a href="#login"><i class="login-ic"></i>Регистрация</a></li>
+        <li><a href="#auth"><i class="login-ic"></i>Авторизация</a></li>
 
         <hr>
         <li class="active">
