--- a/src/style/layout/_tasks.sass
+++ b/src/style/layout/_tasks.sass
@@ -7,6 +7,7 @@
   background: #fff
   box-shadow: 0 1px 3px 0 rgba(0,0,0,0.05)
   border-radius: 6px
+  cursor: pointer
   min-height: 50px
   line-height: 45px
   margin-bottom: 8px
@@ -65,7 +66,7 @@
   height: auto
   border-radius: 6px
   line-height: 1.4em
-  
+
 
 .tag
   display: inline-block
