--- a/src/template/sidebar.html
+++ b/src/template/sidebar.html
@@ -124,10 +124,8 @@
         <li>
           <div class="tag tag--red">Срочно</div>
           <div class="tag tag--blue">Работа</div>
-          <div class="tag tag--red">Ебала</div>
-          <div class="tag tag--blue">Всякое</div>
-          <div class="tag tag--red">Быро</div>
-          <div class="tag tag--blue">Хуета</div>
+          <div class="tag tag--red">Курсовая</div>
+          <div class="tag tag--blue">Остальное</div>
           <div class="tag tag--add" data-remodal-target="add-tag">Добавить тег</div>
         </li>
       </ul>
