--- a/src/template/tasks.html
+++ b/src/template/tasks.html
@@ -1,56 +1,9 @@
-<div class="remodal" data-remodal-id="task-modal">
+<div class="remodal task-modal" data-remodal-id="task-modal">
   <div class="col-xs-12 col-md-8 col-md-offset-2">
     <div class="row">
       <h2>Lorem ipsum dolor sit.</h2>
     </div>
-    <div class="row">
-      <div class="input-group">
-        <input type="text" class="form-control" aria-label="...">
-        <div class="input-group-btn">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></button>
-          <ul class="dropdown-menu dropdown-menu-right">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </div><!-- /btn-group -->
-      </div>
-    </div>
-    <div class="row">
-      <div class="btn-group btn-group-justified" role="group" aria-label="...">
-        <div class="btn-group" role="group">
-          <a type="button" class="btn btn-default">Left</a>
-        </div>
-        <div class="btn-group" role="group">
-          <a type="button" class="btn btn-default">Middle</a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="btn-group btn-group-justified" role="group" aria-label="...">
-        <div class="btn-group" role="group">
-          <a type="button" class="btn btn-default">Left</a>
-        </div>
-        <div class="btn-group" role="group">
-          <a type="button" class="btn btn-default">Middle</a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="btn-group btn-group-justified" role="group" aria-label="...">
-        <div class="btn-group" role="group">
-          <a type="button" class="btn btn-default">Left</a>
-        </div>
-        <div class="btn-group" role="group">
-          <a type="button" class="btn btn-default">Middle</a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <textarea class="form-control" rows="3"></textarea>
-    </div>
+
   </div>
 </div>
 
