--- a/src/style/layout/_tasks.sass
+++ b/src/style/layout/_tasks.sass
@@ -109,3 +109,18 @@
 
 .task-modal
   text-align: left
+
+  .form-control
+    font-size: inherit
+    font-weight: normal
+    height: inherit
+    line-height: inherit
+
+  h2
+    margin-bottom: 35px
+
+  .form-group
+    margin-bottom: 25px
+
+    .col-form-label
+      line-height: 33px
