--- a/src/template/sidebar.html
+++ b/src/template/sidebar.html
@@ -82,7 +82,7 @@
 
       <!-- Не вошли в аккаунт -->
       <div class="profile profile--login">
-        <img src="http://placehold.it/45" class="img-circle">
+        <img src="build/img/avatar.png" class="img-circle">
         <h4>Аноним</h4>
       </div>
     </div>
