--- a/src/style/layout/_sidebar.sass
+++ b/src/style/layout/_sidebar.sass
@@ -6,6 +6,10 @@
     img, h4
       display: inline-block
       vertical-align: top
+
+    img
+      +size(45px)
+      border: 1px solid rgba(#000, .1)
     h4
       padding-top: 4px
       padding-left: 10px
