--- a/src/style/components/_icons.sass
+++ b/src/style/components/_icons.sass
@@ -61,7 +61,7 @@
   +size(20px)
   display: inline-block
   vertical-align: middle
-  margin-top: -12px
+  margin-top: 0
   background-size: contain
   background: url(../img/check-ic.svg) no-repeat
 
