--- a/src/style/components/_icons.sass
+++ b/src/style/components/_icons.sass
@@ -72,3 +72,12 @@
     vertical-align: bottom
     transform: translateY(-2px)
     background-size: cover
+
+.star-ic
+  +size(20px)
+  display: inline-block
+  vertical-align: middle
+  margin-top: 0
+  margin-left: 10px
+  background-size: cover
+  background: url(../img/star-ic.svg) no-repeat
