--- a/src/template/tasks.html
+++ b/src/template/tasks.html
@@ -75,6 +75,7 @@
         <div class="tag tag--blue">Работа</div>
       </div>
       <div class="task-item__time">15 часов</div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
     </div>
 
     <div class="task-item task-item--completed">
@@ -84,6 +85,7 @@
       <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
       <div class="task-item__tags"></div>
       <div class="task-item__time">15 часов</div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
     </div>
 
   </div>
