--- a/src/template/tasks.html
+++ b/src/template/tasks.html
@@ -58,23 +58,24 @@
 
 <div class="col-xs-12 col-md-6">
   <div class="row">
-    <div class="form-group">
+    <div class="form-group add-new">
       <input type="text" class="form-control" id="addTodo" placeholder="Какие планы?">
+      <a href="#!" class="btn">Добавить</a>
     </div>
   </div>
   <div class="row">
-    <div class="day-name"><h2>Все задачи за неделю</h2></div>
+    <div class="day-name day-name--week"><h2>Все задачи за неделю</h2></div>
 
     <div class="task-item">
       <div class="task-item__check">
         <i class="check-ic"></i>
       </div>
       <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
       <div class="task-item__tags">
         <div class="tag tag--red">Срочно</div>
         <div class="tag tag--blue">Работа</div>
       </div>
-      <div class="task-item__time">15 часов</div>
       <div class="task-item__fav"><i class="star-ic"></i></div>
     </div>
 
@@ -83,10 +84,199 @@
         <i class="check-ic"></i>
       </div>
       <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
-      <div class="task-item__tags"></div>
       <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="day-name"><h2>Понедельник</h2><p class="light">2 октября</p></div>
+
+    <div class="task-item">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags">
+        <div class="tag tag--red">Срочно</div>
+        <div class="tag tag--blue">Работа</div>
+      </div>
       <div class="task-item__fav"><i class="star-ic"></i></div>
     </div>
 
+    <div class="task-item task-item--completed">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="day-name"><h2>Вторник</h2><p class="light">3 октября</p></div>
+
+    <div class="task-item">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags">
+        <div class="tag tag--red">Срочно</div>
+        <div class="tag tag--blue">Работа</div>
+      </div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+
+    <div class="task-item task-item--completed">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="day-name"><h2>Среда</h2><p class="light">4 октября</p></div>
+
+    <div class="task-item">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags">
+        <div class="tag tag--red">Срочно</div>
+        <div class="tag tag--blue">Работа</div>
+      </div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+
+    <div class="task-item task-item--completed">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="day-name"><h2>Четверг</h2><p class="light">5 октября</p></div>
+
+    <div class="task-item">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags">
+        <div class="tag tag--red">Срочно</div>
+        <div class="tag tag--blue">Работа</div>
+      </div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+
+    <div class="task-item task-item--completed">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="day-name"><h2>Пятница</h2><p class="light">6 октября</p></div>
+
+    <div class="task-item">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags">
+        <div class="tag tag--red">Срочно</div>
+        <div class="tag tag--blue">Работа</div>
+      </div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+
+    <div class="task-item task-item--completed">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="day-name"><h2>Суббота</h2><p class="light">7 октября</p></div>
+
+    <div class="task-item">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags">
+        <div class="tag tag--red">Срочно</div>
+        <div class="tag tag--blue">Работа</div>
+      </div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+
+    <div class="task-item task-item--completed">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="day-name"><h2>Воскресенье</h2><p class="light">8 октября</p></div>
+
+    <div class="task-item">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags">
+        <div class="tag tag--red">Срочно</div>
+        <div class="tag tag--blue">Работа</div>
+      </div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+
+    <div class="task-item task-item--completed">
+      <div class="task-item__check">
+        <i class="check-ic"></i>
+      </div>
+      <div data-remodal-target="task-modal" class="task-item__text">Lorem ipsum dolor sit amet.</div>
+      <div class="task-item__time">15 часов</div>
+      <div class="task-item__tags"></div>
+      <div class="task-item__fav"><i class="star-ic"></i></div>
+    </div>
+  </div>
+
 </div>
