--- a/src/style/remodal-default-theme.css
+++ b/src/style/remodal-default-theme.css
@@ -47,6 +47,7 @@
 
   color: #2b2e38;
   background: #fff;
+  border-radius: 3px;
 }
 
 .remodal.remodal-is-opening,
@@ -135,6 +136,7 @@
   text-align: center;
   vertical-align: middle;
   text-decoration: none;
+  border-radius: 50px;
 
   border: 0;
   outline: 0;
@@ -226,7 +228,7 @@
 
 @media only screen and (min-width: 641px) {
   .remodal {
-    max-width: 700px;
+    max-width: 480px;
   }
 }
 
