--- a/src/template/sidebar.html
+++ b/src/template/sidebar.html
@@ -1,8 +1,22 @@
 <div class="remodal" data-remodal-id="add-tag">
-  <div class="col-xs-6 col-xs-offset-3">
+  <div class="col-xs-8 col-xs-offset-2">
     <div class="row">
       <div class="form-group">
         <input type="text" class="form-control" id="addTodo" placeholder="Название тега">
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-8 col-xs-offset-2">
+    <div class="row">
+      <div class="form-group">
+        <select class="select-input">
+          <option>123</option>
+          <option>123</option>
+          <option>123</option>
+          <option>123</option>
+          <option>123</option>
+          <option>123</option>
+        </select>
       </div>
     </div>
   </div>
@@ -124,8 +138,11 @@
         <li>
           <div class="tag tag--red">Срочно</div>
           <div class="tag tag--blue">Работа</div>
-          <div class="tag tag--red">Курсовая</div>
-          <div class="tag tag--blue">Остальное</div>
+          <div class="tag tag--yellow">Курсовая</div>
+          <div class="tag tag--pink">Остальное</div>
+          <div class="tag tag--orange">Остальное</div>
+          <div class="tag tag--green">Остальное</div>
+          <div class="tag tag--violet">Остальное</div>
           <div class="tag tag--add" data-remodal-target="add-tag">Добавить тег</div>
         </li>
       </ul>
