--- a/src/style/layout/_sidebar.sass
+++ b/src/style/layout/_sidebar.sass
@@ -1,7 +1,9 @@
+
 .left-bar
   &__profile
     padding: 0 20px 15px 35px
     margin-bottom: 15px
+    max-width: 235px
 
     img, h4
       display: inline-block
@@ -11,8 +13,12 @@
       +size(45px)
       border: 1px solid rgba(#000, .1)
     h4
-      padding-top: 4px
+      padding-top: 0
+      margin-top: 5px
       padding-left: 10px
+
+      a
+        font-size: 1.25rem
 
 
   &__logo
