--- a/src/template/sidebar.html
+++ b/src/template/sidebar.html
@@ -28,53 +28,71 @@
   </div>
 </div>
 
+<!-- <form>
+  <div class="form-group">
+    <label for="auth-mail">Эл. почта</label>
+    <input type="email" class="form-control" id="auth-mail" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="auth-pass">Пароль</label>
+    <input type="password" class="form-control" id="auth-pass" placeholder="Пароль">
+  </div>
+  <div class="form-group">
+
+  </div>
+  <button type="submit" class="btn btn-block btn-primary btn-lg">Войти</button>
+</form> -->
+
+<!-- <form>
+  <div class="form-group">
+    <label for="auth-mail">Эл. почта</label>
+    <input type="email" class="form-control" id="auth-mail2" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="auth-pass">Пароль</label>
+    <input type="password" class="form-control" id="auth-pass2" placeholder="Пароль">
+  </div>
+  <div class="form-group">
+
+  </div>
+  <button type="submit" class="btn btn-block btn-primary btn-lg">Зарегистрироваться</button>
+</form> -->
+
+<div class="remodal auth" data-remodal-id="registration">
+  <div class="col-xs-12 col-md-8 col-md-offset-2">
+    <form>
+      <div class="form-group">
+        <label for="auth-mail">Эл. почта</label>
+        <input type="email" class="form-control" id="auth-mail2" placeholder="Email">
+      </div>
+      <div class="form-group">
+        <label for="auth-pass">Пароль</label>
+        <input type="password" class="form-control" id="auth-pass2" placeholder="Пароль">
+      </div>
+      <div class="form-group">
+
+      </div>
+      <button type="submit" class="btn btn-block btn-primary btn-lg">Зарегистрироваться</button>
+    </form>
+  </div>
+</div>
+
 <div class="remodal auth" data-remodal-id="auth">
-  <!-- <div class="col-xs-12 col-md-6"> -->
-  <!-- <div class="col-xs-12 col-md-6"> -->
-
-  <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active">
-        <a href="#login" aria-controls="home" role="tab" data-toggle="tab">Вход</a>
-      </li>
-      <li role="presentation">
-        <a href="#reg" aria-controls="profile" role="tab" data-toggle="tab">Регистрация</a>
-      </li>
-    </ul>
-    <div class="tab-content">
-      <div role="tabpanel" class="tab-pane active" id="login">
-        <form>
-          <div class="form-group">
-            <label for="auth-mail">Эл. почта</label>
-            <input type="email" class="form-control" id="auth-mail" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="auth-pass">Пароль</label>
-            <input type="password" class="form-control" id="auth-pass" placeholder="Пароль">
-          </div>
-          <div class="form-group">
-
-          </div>
-          <button type="submit" class="btn btn-block btn-primary btn-lg">Войти</button>
-        </form>
+  <div class="col-xs-12 col-md-8 col-md-offset-2">
+    <form>
+      <div class="form-group">
+        <label for="auth-mail">Эл. почта</label>
+        <input type="email" class="form-control" id="auth-mail" placeholder="Email">
       </div>
-      <div role="tabpanel" class="tab-pane" id="reg">
-        <form>
-          <div class="form-group">
-            <label for="auth-mail">Эл. почта</label>
-            <input type="email" class="form-control" id="auth-mail2" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="auth-pass">Пароль</label>
-            <input type="password" class="form-control" id="auth-pass2" placeholder="Пароль">
-          </div>
-          <div class="form-group">
-
-          </div>
-          <button type="submit" class="btn btn-block btn-primary btn-lg">Зарегистрироваться</button>
-        </form>
+      <div class="form-group">
+        <label for="auth-pass">Пароль</label>
+        <input type="password" class="form-control" id="auth-pass" placeholder="Пароль">
       </div>
-    </div>
+      <div class="form-group">
+
+      </div>
+      <button type="submit" class="btn btn-block btn-primary btn-lg">Войти</button>
+    </form>
   </div>
 </div>
 
@@ -95,10 +113,16 @@
       </div> -->
 
       <!-- Не вошли в аккаунт -->
-      <div class="profile profile--login">
+      <!-- <div class="profile profile--login">
         <img src="build/img/avatar.png" class="img-circle">
         <h4>Аноним</h4>
+      </div> -->
+
+      <div class="profile profile--login">
+        <img src="build/img/avatar.png" class="img-circle">
+        <h4>Аноним <br><a href="#auth">Войти</a></h4>
       </div>
+
     </div>
 
     <div class="left-bar__action row">
@@ -109,7 +133,7 @@
 
         <!-- Не вошли в аккаунт -->
         <!-- <li><a href="#"><i class="settings-ic"></i></a></li> -->
-        <li><a href="#auth"><i class="login-ic"></i>Авторизация</a></li>
+        <li><a href="#registration"><i class="login-ic"></i>Регистрация</a></li>
 
         <hr>
         <li class="active">
