--- a/src/style/layout/_sidebar.sass
+++ b/src/style/layout/_sidebar.sass
@@ -57,3 +57,10 @@
 
   .badge
     float: right
+
+
+.row .footer
+  text-align: left
+  margin-top: 50px
+  margin-bottom: 15px
+  text-align: center
