--- a/src/style/layout/_tasks.sass
+++ b/src/style/layout/_tasks.sass
@@ -123,8 +123,8 @@
     flex-basis: 20%
     background: #247CAD
     color: #fff
+    font-size: 1.5rem
     line-height: 32px
-
 
 .tag
   display: inline-block
