--- a/src/template/sidebar.html
+++ b/src/template/sidebar.html
@@ -120,7 +120,7 @@
 
       <div class="profile profile--login">
         <img src="build/img/avatar.png" class="img-circle">
-        <h4>Аноним <br><a href="#auth">Войти</a></h4>
+        <h4><a href="#auth">Войти</a></h4>
       </div>
 
     </div>
