--- a/src/style/layout/_sidebar.sass
+++ b/src/style/layout/_sidebar.sass
@@ -13,7 +13,7 @@
       +size(45px)
       border: 1px solid rgba(#000, .1)
     h4
-      padding-top: 0
+      padding-top: 10px
       margin-top: 5px
       padding-left: 10px
 
