--- a/src/template/sidebar.html
+++ b/src/template/sidebar.html
@@ -120,7 +120,7 @@
 
       <div class="profile profile--login">
         <img src="build/img/avatar.png" class="img-circle">
-        <h4><a href="#auth">Войти</a></h4>
+        <h4><a href="#auth">Регистрация</a></h4>
       </div>
 
     </div>
@@ -133,7 +133,7 @@
 
         <!-- Не вошли в аккаунт -->
         <!-- <li><a href="#"><i class="settings-ic"></i></a></li> -->
-        <li><a href="#registration"><i class="login-ic"></i>Регистрация</a></li>
+        <li><a href="#registration"><i class="login-ic"></i>Войти</a></li>
 
         <hr>
         <li class="active">
