--- a/src/style/layout/_sidebar.sass
+++ b/src/style/layout/_sidebar.sass
@@ -58,6 +58,63 @@
   .badge
     float: right
 
+.input-form__file
+  width: 100%
+  min-width: 200px
+  height: 42px
+  line-height: 40px
+  margin-bottom: 15px
+  cursor: pointer
+  position: relative
+  display: inline-block
+  white-space: nowrap
+  text-align: right
+
+  &:before,
+  &:after
+    box-sizing: border-box
+    height: inherit
+    overflow: hidden
+    text-overflow: ellipsis
+    text-align: center
+    font-weight: normal
+    vertical-align: middle
+
+  &:before
+    z-index: 1
+    content: "Файл не выбран"
+    display: block
+    position: absolute
+    width: 100%
+    background-color: transparent
+    color: rgb(133, 133, 133)
+    border-width: 1px
+    border-style: solid
+    border-color: rgba(0, 0, 0, 0.2)
+    border-image: initial
+    padding: 0px 84px 0px 10px
+    border-radius: 4px
+
+  &:after
+    content: "Выбрать"
+    display: inline-block
+    position: relative
+    width: 74px
+    font-size: 14px
+    background-color: #247CAD
+    color: rgb(255, 255, 255)
+    padding: 0px 4px
+    border-radius: 0px 4px 4px 0px
+
+  input
+    position: absolute
+    width: 0
+    overflow: hidden
+    opacity: 0
+
+.input-form__file[title]:not([title=""]):before
+  content: attr(title)
+  color: #121212
 
 .row .footer
   text-align: left
