--- a/src/template/tasks.html
+++ b/src/template/tasks.html
@@ -1,5 +1,5 @@
 <div class="remodal task-modal" data-remodal-id="task-modal">
-  <div class="col-xs-12 col-md-10 col-md-offset-1">
+  <div class="col-xs-12">
     <div class="row">
       <div class="form-group">
         <h2><small>Изменение записи</small></h2>
